# dingtalk_utils

./: LICENSE  README.md  pyproject.toml  setup.py
dingtalk_utils/: __init__.py
dingtalk_utils/client/: __init__.py  corp.py  setting.py  user.py
dingtalk_utils/contacts/: api.py
dingtalk_utils/department/: api.py
