[project]
name = "dingtalk_utils"
version = "1.0.0"
authors = [
    { name = "hzIsFoodDesert", email = "w18664144718@live.com" },
]
description = "钉钉API"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]
[project.urls]
Homepage = "https://github.com/wujialaoer/dingtalk_utils"
Issues = "https://github.com/wujialaoer/dingtalk_utils/issues"